Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-doc",
+  "name": "eslint-config-dutyofcare",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
