--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@getify/eslint-plugin-proper-arrows": "^8.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "object.assign": "^4.1.0",
     "object.entries": "^1.1.0"
