--- a/rules.yaml
+++ b/rules.yaml
@@ -13,6 +13,8 @@ rules:
 
   arrow-parens: ["error", "as-needed"]
 
+  no-await-in-loop: ["off"]
+  
   consistent-return:
     - "warn"
     - treatUndefinedAsUnspecified: true
